new poisitions functional and binding with company id
