# server/src/interfaces/positions-categories.ts
@@ -1,5 +1,0 @@
-export interface IPositionCategory {
-  id?: number;
-  positionId: number;
-  categoryId: number;
-}
