# server/src/interfaces/positions-elements.ts
@@ -1,6 +1,0 @@
-export interface IPositionElement {
-  id?: number;
-  positionId: number;
-  elementId: number;
-  weight: string;
-}
