# server/src/repositories/positions-elements-repository.ts
@@ -1,88 +1,0 @@
-import pool from "../db";
-import { IPositionElement } from "../interfaces/positions-elements";
-import queryBuilder from "../utils/query-builder";
-
-const props = [
-  { name: "id", dbName: "id" },
-  { name: "positionId", dbName: "position_id" },
-  { name: "elementId", dbName: "element_id" },
-  { name: "weight", dbName: "weight" },
-];
-
-const tableName = "positions_elements";
-
-const findAll = async () => {
-  const client = await pool.connect();
-  const foundedRows = await queryBuilder.selectAll(client, tableName);
-  client.release();
-
-  return queryBuilder.mapFromDb(foundedRows, props);
-};
-
-const findById = async (id: number) => {
-  const client = await pool.connect();
-  const foundedRows = await queryBuilder.selectBySpec(client, tableName, { id });
-  client.release();
-
-  return queryBuilder.mapFromDb(foundedRows, props)[0];
-};
-
-const findByPositionId = async (position_id: number) => {
-  const client = await pool.connect();
-  const foundedRows = await queryBuilder.selectBySpec(client, tableName, { position_id });
-  client.release();
-
-  return queryBuilder.mapFromDb(foundedRows, props)[0];
-};
-
-const findAllByPositionId = async (position_id: number) => {
-  const client = await pool.connect();
-  const foundedRows = await queryBuilder.selectBySpec(client, tableName, { position_id });
-  client.release();
-
-  return queryBuilder.mapFromDb(foundedRows, props);
-};
-
-const create = async (positionElement: IPositionElement) => {
-  const client = await pool.connect();
-
-  const createdRows = await queryBuilder.insertOne(
-    client,
-    tableName,
-    queryBuilder.mapToDb({ ...positionElement, id: undefined }, props)
-  );
-  client.release();
-
-  return queryBuilder.mapFromDb(createdRows, props)[0];
-};
-
-const updateById = async (positionElement: IPositionElement, id: number) => {
-  const client = await pool.connect();
-  const updatdRows = await queryBuilder.updateOneBySpec(
-    client,
-    tableName,
-    queryBuilder.mapToDb({ ...positionElement, id: undefined }, props),
-    { id }
-  );
-  client.release();
-
-  return queryBuilder.mapFromDb(updatdRows, props)[0];
-};
-
-const removeById = async (id: number) => {
-  const client = await pool.connect();
-  const removedRows = await queryBuilder.removeOneBySpec(client, tableName, { id });
-  client.release();
-
-  return queryBuilder.mapFromDb(removedRows, props)[0];
-};
-
-export default {
-  findAll,
-  findById,
-  create,
-  updateById,
-  removeById,
-  findByPositionId,
-  findAllByPositionId,
-};
